--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.5.17",
+    "vue-scroll-reveal": "^1.0.8",
     "vuetify": "^1.0.19"
   },
   "devDependencies": {
