--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "vue": "^2.6.11",
     "vue-scroll-reveal": "^1.0.11",
+    "vue-typer": "^1.2.0",
     "vuetify": "^2.2.6"
   },
   "devDependencies": {
